testdata/baselines/reference/submodule/compiler/generatorES6_5.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'IterableIterator'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
generatorES6_5.ts(2,11): error TS2304: Cannot find name 'a'.
generatorES6_5.ts(2,15): error TS2304: Cannot find name 'b'.
generatorES6_5.ts(2,19): error TS2304: Cannot find name 'c'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'IterableIterator'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== generatorES6_5.ts (3 errors) ====
    function* foo() {
        yield a ? b : c;
              ~
!!! error TS2304: Cannot find name 'a'.
                  ~
!!! error TS2304: Cannot find name 'b'.
                      ~
!!! error TS2304: Cannot find name 'c'.
    }